--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     </div>
   </div>
 
-  <audio data-key="65" src="sounds/clap.wav"></audio>
-  <audio data-key="83" src="sounds/hihat.wav"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="65" src="assests/sounds/clap.wav"></audio>
+  <audio data-key="83" src="assests/sounds/hihat.wav"></audio>
+  <audio data-key="68" src="assests/sounds/kick.wav"></audio>
+  <audio data-key="70" src="assests/sounds/openhat.wav"></audio>
+  <audio data-key="71" src="assests/sounds/boom.wav"></audio>
+  <audio data-key="72" src="assests/sounds/ride.wav"></audio>
+  <audio data-key="74" src="assests/sounds/snare.wav"></audio>
+  <audio data-key="75" src="assests/sounds/tom.wav"></audio>
+  <audio data-key="76" src="assests/sounds/tink.wav"></audio>
 
 <script src="scripts/script.js">
 
